# polytonize

./: .gitignore  LICENSE  README.md  cached_refinements.json  part_of_speech.py  server.py  string_compare.py  test_sentences.py  test_single_words.py  to_polytonic.py
lib_python/: part_of_speech.py  to_polytonic.py
lib_rust/: Cargo.toml  README.md
lib_rust/pos/: pyproject.toml
lib_rust/pos/src/pos/: __init__.py  test.py
lib_rust/scripts/: lint.sh  setup.sh  test.sh
lib_rust/src/: extension.rs  lib.rs  pos.rs  syllables.rs
lib_rust/src/test_common/: mod.rs
server/: Cargo.toml  pyproject.toml
server/src/: cli.rs  main.rs
web/: index.html
