[package]
name = "polytonize"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.*"
pyo3 = { version = "0.24.*", features = ["auto-initialize"] }
regex = "1.*"
strum = { version = "0.27.*", features = ["derive"] }
unicode-normalization = "0.1.*"
unic-ucd-normal = "0.9.*"
unic-ucd-category = "0.9.*"

[dev-dependencies]
rstest = "0.25.*"

[profile.release]
debug = 0
strip = true