[package]
name = "polytonize-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
clap = { version = "4", features = ["derive"] }
clap-verbosity = "2"
env_logger = "0.11"
serde = { version = "1.*", features = ["derive"] }
polytonize = { path = "../lib_rust" }
pyo3 = "0.24.2"
log = "0.4.27"

[profile.release]
debug = 0
lto = true
strip = true