[project]
name = "pos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "George Liontos", email = "georgeliontos98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gr-nlp-toolkit>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
